--- a/Report.Server.csproj
+++ b/Report.Server.csproj
@@ -10,8 +10,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Flurl.Http" Version="4.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
+    <PackageReference Include="Sentry" Version="4.12.1" />
+    <PackageReference Include="ServiceStack.Redis" Version="8.4.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Telerik.Reporting.OpenXmlRendering" Version="15.2.21.1125" />
+    <PackageReference Include="Telerik.Reporting.Services.AspNetCore" Version="15.2.21.1125" />
+    <PackageReference Include="Telerik.Reporting.WebServiceDataSource" Version="15.2.21.1125" />
   </ItemGroup>
 
 </Project>
