--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,20 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ReportServer": {
+    "BaseUrl": "https://reporting.wyocrm.com:4443"
   },
-  "AllowedHosts": "*"
+  "Redis": {
+    "Host": "101.100.172.172",
+    "Port": "6379",
+    "Password": "Bi35K0yqV9XmQtvL08S434QMCHthnt9e",
+    "ConnectionString": "101.100.172.172:6379,password=Bi35K0yqV9XmQtvL08S434QMCHthnt9e"
+  },
+  "Credentials": {
+    "Username": "wyo",
+    "Password": "VBClZ6DlCOk0f8Gi00AY8aSD0N7D3JdFJpjitGKA"
+  },
+  "ReportsStorage": {
+    "FolderPath": "C:\\Reports"
+  },
+  "TimerInterval": 6000, // 30分钟
+  "MaximumOrderWorkers": 7
 }
