change:JWT token works now

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,7 @@
   "ReportsStorage": {
     "FolderPath": "C:\\Reports"
   },
-  "TimerInterval": 180000, // 30分钟
+  "TimerInterval": 1800000, //30mins
   "MaximumOrderWorkers": 7,
   "TelerikReportOptions": {
     "BaseUrl": "https://reporting.wyocrm.com:4443/",
