--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -34,7 +34,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:2491",
+      "applicationUrl": "https://localhost:44384",
       "sslPort": 44384
     }
   }
