fix:simplify method save to Redis add:method download to local file

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,5 @@
 {
   "RedisConnString": "redis://Bi35K0yqV9XmQtvL08S434QMCHthnt9e@101.100.172.172:6379",
-  "ReportsStorage": {
-    "FolderPath": "C:\\Reports"
-  },
   "TimerInterval": 1800000, //30mins
   "MaximumOrderWorkers": 7,
   "TelerikReportOptions": {
@@ -13,7 +10,7 @@
     "TokenPath": "token",
     "ReportsByCategoryPath": "api/reportserver/v2/categories/{0}/reports",
     "ParametersPath": "api/reportserver/v2/reports/{0}/parameters",
-    "SavePath": "C://Reports"
+    "ReportLatestPath": "api/reportserver/v2/reports/{0}/revisions/latest"
   },
   "RedisKeys": {
     "MerchantsKey": "wyo:report_server:merchants",
