add: project version

--- a/Report.Server.csproj
+++ b/Report.Server.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <Version>5.0.0</Version>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>4b47aa09-6619-4eb0-a543-0cf19fc4646d</UserSecretsId>
