add: logs in hosted service

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "RedisConnString": "redis://Bi35K0yqV9XmQtvL08S434QMCHthnt9e@101.100.172.172:6379",
-  "TimerInterval": 1800000, //30mins
+  "TimerInterval": 1800000, 
   "MaximumOrderWorkers": 7,
   "TelerikReportOptions": {
     "BaseUrl": "https://reporting.wyocrm.com:4443/",
