--- a/Report.Server.csproj
+++ b/Report.Server.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
     <PackageReference Include="Sentry" Version="4.13.0" />
     <PackageReference Include="Sentry.AspNetCore" Version="4.13.0" />
+    <PackageReference Include="Sentry.Extensions.Logging" Version="4.13.0" />
     <PackageReference Include="ServiceStack.Redis" Version="6.11.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
