--- a/Report.Server.csproj
+++ b/Report.Server.csproj
@@ -19,9 +19,10 @@
     <PackageReference Include="Sentry.Extensions.Logging" Version="4.13.0" />
     <PackageReference Include="Sentry.Profiling" Version="4.13.0" />
     <PackageReference Include="ServiceStack.Redis" Version="6.11.0" />
-    <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
+	  
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Telerik.Reporting" Version="16.2.22.1109" />
+    <PackageReference Include="Telerik.Reporting.Cache.StackExchangeRedis" Version="16.2.22.1109" />
     <PackageReference Include="Telerik.Reporting.OpenXmlRendering" Version="16.2.22.1109" />
     <PackageReference Include="Telerik.Reporting.Services.AspNetCore" Version="16.2.22.1109" />
     <PackageReference Include="Telerik.Reporting.WebServiceDataSource" Version="16.2.22.1109" />
